[tool.poetry]
name = "rag-context-debugger"
version = "0.1.0"
description = "A 1-Click debugger for analyzing context vectors from Tecton-powered RAG systems."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
tecton = "^1.2.0"
streamlit = "^1.28.0"
click = "^8.1.3"
pandas = "^2.1.0"
pytz = "^2023.3"
# Added for semantic analysis and visualization
scikit-learn = "^1.7.1"
plotly = "^5.18.0"
python-dotenv = "^1.1.1"

[tool.poetry.scripts]
rag-debug = "rag_context_debugger.cli:main"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"